--- a/Ricette/Pane-e-lievitati/panini-hamburger-veloci.tex
+++ b/Ricette/Pane-e-lievitati/panini-hamburger-veloci.tex
@@ -1,4 +1,4 @@
-\recipe[Questa ricetta mi è stata insegnata ad un corso di cucina. Prima facevo i panini con una ricetta molto più lunga e complicata. Con questa ricetta il risultatto non è molto diverso e si perde meno tempo.]{Panini da hamburgher veloci}\label{panini-hamburger}
+\recipe[Questa ricetta mi è stata insegnata ad un corso di cucina. Prima facevo i panini con una ricetta molto più lunga e complicata. Con questa ricetta il risultato non è molto diverso e si perde meno tempo.]{Panini da hamburger veloci}\label{panini-hamburger}
 \serves{8}
 \preptime{2 ore e 30}
 \cooktime[Cottura]{30 minuti}
@@ -14,11 +14,11 @@
 \begin{method}
 	Metti tutti gli ingredienti nella planetaria e impasta per 10 minuti.
 
-	Dai un paio di pieghe alla pasta e forma le palline. Per mini hamburgher fai palline da 30g per hamburgher tradizionali fai palline da 120g. Questa operazione si chiama pirlatura. Si tratta di richiudere la pasta su se stessa come un sacchetto in modo che la gabbia glutinica intrappoli le bolle d'aria che si sviluppano durante la lievitazione.
+	Trasferisci la pasta sulla spianatoia e dai un paio di pieghe, poi forma le palline. Per mini hamburger fai palline da 30g; per hamburger normali fai palline da 120g. Questa operazione si chiama pirlatura. Si tratta di richiudere la pasta su se stessa come un sacchetto in modo che la gabbia glutinica intrappoli le bolle d'aria che si sviluppano durante la lievitazione.
 
 	Fai lievitare fino al raddoppio del volume. Servirà circa 1 ora e 30 minuti, ma questo tempo può variare in base alla temperatura e alla quantità di lievito che decidi di utilizzare.
 	
-	Quando i panini sono lievitati, se vuoi, puoi spennellare la superfice con tuorlo d'uovo e acqua o latte e successivamente cospargere semi si sesamo o altri semi. Questa operazione, oltre a rendere i panini più belli, conferirà ai panini una nota profumata interessante.
+	Quando i panini sono lievitati, se vuoi, puoi spennellare la superficie con tuorlo d'uovo e acqua o latte e, successivamente, cospargere semi di sesamo o altri semi. Questa operazione, oltre a rendere i panini più belli, conferirà ai panini una nota profumata interessante.
 
 	Cuoci i panini in forno ventilato a \temp{190} per 15 minuti.
 
