--- a/Ricette/Pane-e-lievitati/pizza-in-teglia.tex
+++ b/Ricette/Pane-e-lievitati/pizza-in-teglia.tex
@@ -16,9 +16,9 @@
 \end{ingreds}
 
 \begin{method}
-\underline{Impasto a mano.} Il pomeriggio del giorno prima metti in una ciotola la farina e il lievito poi mescola. Aggiungi poco alla volta l'acqua fino a incorporarla tutta. Poi aggiungi il sale, l'olio e mescola con un cucchiaio. L'impasto rimarrà grumoso. Aspetta 15 minuti poi metti l'impasto sulla spianatoia infarinata e piega in 3, prima da una parte poi dall'altra. Ripeti queste pieghe 3 o 4 volte lasciando un tempo di riposo di 15 minuti fra una piega e la successiva.
+\underline{Impasto a mano}. Il pomeriggio del giorno prima metti in una ciotola la farina e il lievito poi mescola. Aggiungi poco alla volta l'acqua fino a incorporarla tutta. Poi aggiungi il sale, l'olio e mescola con un cucchiaio. L'impasto rimarrà grumoso. Aspetta 15 minuti poi metti l'impasto sulla spianatoia infarinata e piega in 3, prima da una parte poi dall'altra. Ripeti queste pieghe 3 o 4 volte lasciando un tempo di riposo di 15 minuti fra una piega e la successiva.
 
-\underline{Impasto con la planetaria} Se vuoi usare la planetaria, metti tutti gli ingredienti nella ciotola e impasta per 8 minuti a velocità medio alta con la foglia. Poi rimuovi la pasta dalla foglia e fai riposare per 10 minuti. Fai partire la planetaria alla velocità minima giusto il tempo di raccogliere la pasta poi fai altri 10 minuti di riposo e ripeti l'operazione. Trasferisci l'impasto sul piano in acciaio oliato e fai le pieghe, lasciando riposare la pasta 10 minuti fra una piega e la successiva.
+\underline{Impasto con la planetaria}. Se vuoi usare la planetaria, metti tutti gli ingredienti nella ciotola e impasta per 8 minuti a velocità medio alta con la foglia. Poi rimuovi la pasta dalla foglia e fai riposare per 10 minuti. Fai partire la planetaria alla velocità minima giusto il tempo di raccogliere la pasta poi fai altri 10 minuti di riposo e ripeti l'operazione. Trasferisci l'impasto sul piano in acciaio oliato e fai le pieghe, lasciando riposare la pasta 10 minuti fra una piega e la successiva.
 
 Metti l'impasto già diviso in 2 in un contenitore ermetico unto e fai lievitare in frigo per tutta la notte.
 
