--- a/Ricette/Antipasti/mini-hamburger-di-orata.tex
+++ b/Ricette/Antipasti/mini-hamburger-di-orata.tex
@@ -18,13 +18,13 @@
 \end{ingreds}
 
 \begin{method}
-Per prima cosa prepara la panna acida, se vuoi puoi farla anche il giorno prima conservandola in frigo. Fai stufare la cipolla tagliata a striscioline, poi aggiungi il vino e l'aceto e fai ridurre lentamente. Nel frattempo in un padellino fai ridurre la panna. Setaccia e spremi la cipolla. Aggiungila alla panna e fai riposare in frigorifero per qualche ora.
+Per prima cosa prepara la panna acida, se vuoi puoi farla anche il giorno prima conservandola in frigorifero. Fai stufare la cipolla tagliata a striscioline, poi aggiungi il vino e l'aceto e fai ridurre lentamente. Nel frattempo in un padellino fai ridurre la panna. Setaccia, spremi la cipolla e aggiungila alla panna, poi fai riposare in frigorifero per qualche ora.
 
 Sfiletta l'orata e prepara una tartare battuta a coltello. Con il coppapasta prepara dei mini hamburger serrandoli con mezza foglia di alloro sui due lati. Lascia riposare gli hamburger in frigorifero.
 
 Taglia il porro a juilenne sottili, infarinalo e friggilo in olio di semi di girasole a \temp{170}.
 
-Taglia il pane con il coppapasta che hai usato per preparare gli hamburger e fallo tostare in forno. Cuoci gli hamburger in una padella antiaderente senza esagerare con la cottura. Componi i panini con la panna acida, l'hamburger di orata al quale avrai tolto le foglie di alloro e il porro fritto. Puoi fermare i panini con uno stuzzicadente.
+Taglia il pane con il coppapasta che hai usato per preparare gli hamburger e fallo tostare in forno. Cuoci gli hamburger in una padella antiaderente senza esagerare con la cottura. Componi i panini con la panna acida, l'hamburger di orata al quale avrai tolto le foglie di alloro e il porro fritto. Puoi fermare i panini con uno stuzzicadenti.
 \end{method}
 \subsection*{Note}
 		Puoi sostituire l'orata con pesci simili: branzino, ricciola, pagello. Anche con il salmone non è mala, ma meno delicato.
