Corretti refusi e piccoli errori

--- a/Ricette/CBT/vitello-tonnato-cbt.tex
+++ b/Ricette/CBT/vitello-tonnato-cbt.tex
@@ -6,19 +6,19 @@
 \begin{ingreds}
 	500g girello di vitello \index{girello di vitello}
 	erbe aromatiche
-	maionese (Vedi ricetta \ref{maionese})\index{maionese}
+	maionese (Vedi ricetta \ref{maionese}) \index{maionese}
 	pangrattato \index{pangrattato}
 	peperoncino \index{peperoncino}
-	capperi \index{capperi} sott'aceto
+	capperi sott'aceto \index{capperi}
 	acciughe \index{acciughe}
 	cetriolini sott'aceto \index{cetriolini sott'aceto}
 	olio evo \index{olio!olio e.v.o.}
 \end{ingreds}
 
 \begin{method}
-Massaggia il girello di vitello con olio extravergine d'oliva e cospargi con le erbe aromatiche e il sale. Mettiolo sotto vuoto e cuoci in un bagno termostatato a \temp{58} per 4-5 ore.
+Massaggia il girello di vitello con olio extravergine d'oliva e cospargi con le erbe aromatiche e il sale. Metti sotto vuoto la carne e cuoci in un bagno termostatato a \temp{58} per 4-5 ore.
 
-In un padellino scalda un po di olio extravergine d'oliva con il peperoncino, aggiungi il pan grattato e tosta leggermente.
+In un padellino scalda poco d'olio extravergine d'oliva con il peperoncino, aggiungi il pan grattato e tosta leggermente per creare una panatura piccante.
 
-Affetta il girello molto sottile, dipsoni le fette in un piatto eguarnisci con alcuni fiocchetti di maionese, un po di pan grattato, qualche pezzetto di acciugna, capperi e cetriolini.
-\end {method}
+Affetta il girello molto sottile, disponi le fette in un piatto e guarnisci con alcuni fiocchetti di maionese, un po' di pan grattato, qualche pezzetto di acciuga, capperi e cetriolini sott'aceto.
+\end{method}
