--- a/Ricette/Dolci/cioccolata-in-tazza.tex
+++ b/Ricette/Dolci/cioccolata-in-tazza.tex
@@ -18,7 +18,7 @@
 \end{ingreds}
 
 \begin{method}
-Spezzetta il cioccolato e mescolalo con lo zucchero, il cacao e la maizena. Scalda in un tegamino $\frac{2}{3}$ del latte poi versalo sul cioccolato. Lavora con il frullatore a immersione per amalgamare gli ingredienti. Aggiungi il resto del latte e riprta sul fuoco. Continua a frullare per rendere la bevanda più spumosa. Aggiungi gli aromi.
+Spezzetta il cioccolato e mescolalo con lo zucchero, il cacao e la maizena (opzionale). Scalda in un tegamino $\frac{2}{3}$ del latte poi versalo sul cioccolato. Lavora con il frullatore a immersione per amalgamare gli ingredienti. Aggiungi il resto del latte e riporta sul fuoco. Continua a frullare per rendere la bevanda più spumosa. Aggiungi gli aromi che preferisci.
 \end{method}
 
 %\showit[1.25in]{example-image-b}{This is a picture}
