--- a/Ricette/Secondi-di-pesce/tataki-di-tonno-agli-agrumi.tex
+++ b/Ricette/Secondi-di-pesce/tataki-di-tonno-agli-agrumi.tex
@@ -4,31 +4,31 @@
 \cooktime[Cottura]{5 minuti}
 \autore{Max}
 \begin{ingreds}
-	500g tonno\index{tonno} fresco
+	500g tonno fresco \index{tonno}
 	1 arancia
-	1 rametto di rosmarino
+	1 rametto di rosmarino \index{rosmarino}
 	1 spicchio d'aglio
 	olio evo \index{olio!olio e.v.o.}
 	sale
 \columnbreak
 \ingredients[Per la salsa:]
-	120g di fagioli\index{fagioli} canellini lessati
+	120g di fagioli canellini lessati \index{fagioli}
 	brodo vegetale
-	limone\index{limone}
-	olio evo
+	limone \index{limone}
+	olio evo \index{olio!olio e.v.o.}
 	sale
-	cipolla\index{cipolla}
+	cipolla \index{cipolla}
 \end{ingreds}
 
 \begin{method}
 
 Taglia il tonno a parallelepipedi con il lato piccolo di 3x3 centimetri. Metti i filetti a marinare per qualche ora in frigorifero con le scorze degli agrumi e l'olio extravergine di oliva.
 
-Scalda una padella antiaderente o di ferro a temperatura altissima e cuoci il tonno per pochi secondi per ogni lato. Successivamente immergi il tonno in acqua e ghiaccio per fermare la cottura. Asciuga il tonno e mettilo a marinare con rosmarino e aglio coprendolo compeltamente di olio extravergine di oliva.
+Scalda una padella antiaderente o di ferro a temperatura altissima e cuoci il tonno per pochi secondi per ogni lato. Successivamente immergi il tonno in acqua e ghiaccio per fermare la cottura. Asciuga il tonno e mettilo a marinare con rosmarino e aglio coprendolo completamente di olio extravergine di oliva.
 
 Prepara la salsa frullando i fagioli con brodo vegetale, succo di limone, sale e olio extravergine di oliva. Setaccia la salsa così ottenuta con un colino.
 
 Friggi la cipolla leggermente infarinata.
 
 Componi il piatto con la salsa di fagioli sul fondo, dei cubetti di tonno, la cipolla fritta, qualche granello di sale e un giro di olio evo.
-\end {method}
+\end{method}
