--- a/Ricette/Dolci/barrette-energetiche.tex
+++ b/Ricette/Dolci/barrette-energetiche.tex
@@ -9,14 +9,14 @@
 	125g frutta secca (albicocche, uvetta o altro)
 	250g miele \index{miele}
 	160 burro di arachidi \index{burro di arachidi}
-	un cucchiaino di cacao\index{cacao} amaro
+	un cucchiaino di cacao amaro \index{cacao}
 %\columnbreak
 %\ingredients[For the Crumble Mixture:]
 
 \end{ingreds}
 
 \begin{method}
-	Schiaccia le banane. Se necessari scalda leggermente il burro di arachidi e il miele per amalgamare meglio. Mescola tutti gli ingredieti. Fodera un teglia di carta da forno e cuoci a \temp{140} per 40 minuti. Ogni barretta dovrebbe avere circa 150 calorie.
+	Schiaccia le banane. Se necessario, scalda leggermente il burro di arachidi e il miele per amalgamarli meglio al resto degli ingredienti. Mescola tutti gli ingredienti. Fodera un teglia di carta da forno e cuoci a \temp{140} per 40 minuti. Ogni barretta dovrebbe avere circa 150 calorie.
 \end{method}
 
 %\showit[1.25in]{example-image-b}{This is a picture}
