Inserita introduzione e temperature di cottura

--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -166,7 +166,7 @@ Se le ricette sono state prese da fonti diverse nelle prime righe del testo vien
 
 Tutte queste ricette sono state provate e sono state inserite qui perché mi sono piaciute e ho ritenuto valesse la pena ricordarle. Per questo motivo il presente testo non è un libro di ricette ma è il mio quaderno di \emph{Appunti di cucina}.
 
-%\input{./metodi/temperature.tex}
+\input{./metodi/temperature.tex}
 
 \newpage
 \chapter{Pane e lievitati}
