--- a/metodi/temperature.tex
+++ b/metodi/temperature.tex
@@ -1,10 +1,10 @@
-\section{Simboli utilizzati nel presente testo}
+\section{Simboli utilizzati nel testo}
 In questo testo vengono utilizzati alcuni simboli per indicare i parametri della ricetta. \Fork\Dish\Knife \> Indica il numero di porzioni. \Gloves \> indica il tempo di preparazione della ricetta. \Gasstove \> indica il tempo di cottura.
 
-\section{Temperature di cottura al cuore}
+\section{Appunti sulle temperature di cottura al cuore}
 Conoscere la temperatura di cottura al cuore di un alimento è utile per poter replicare le ricette senza possibilità di errore e per garantire sempre il miglior risultato possibile secondo il proprio gusto personale.
 
-La tabella \ref{temperature-al-cuore} è stata elaborata sulla base delle mie preferenze facendo prove con valori diversi.
+La tabella \ref{temperature-al-cuore} è stata elaborata sulla base delle mie preferenze facendo prove con valori diversi, e annotando quelle che fornivano a mio parere un risultato ottimale.
 
 
 
@@ -19,8 +19,8 @@ Pollo ripieno 		& 	71°C 		& Temperatura ideale per qualunque volatile ripieno\\
 Polpettone di manzo	&	75°C 		& Temperatura ideale se si aggiunge pane ammollato nel latte, altrimenti meglio abbassare un po' la temperatura\\
 \bottomrule
 \end{tabular}
-\label{temperature-al-cuore}
-\caption{Temperature di cottura al cuore dell'alimento ottimali}
+\caption{Temperature di cottura al cuore dell'alimento ottimali secondo il mio gusto personale.}\label{temperature-al-cuore}
+
 \end{table}
 
 \section{Appunti di cottura a bassa temperatura (CBT)}
@@ -43,7 +43,6 @@ Roast beef			&	\temp{58}	&	4-5 ore	&	Poi rifinito in padella in ferro \\
 Filetti di sgombro	&	\temp{60}	&	40 minuti \\
 \bottomrule
 \end{tabular}
-\label{temperature-cbt}
-\caption{Parametri di cottura CBT.}
+\caption{Temperature e tempi di cottura CBT per gli alimenti che cucino più spesso.}\label{temperature-cbt}
 \end{table}
 
