--- a/Ricette/Pane-e-lievitati/crackers-al-sesamo.tex
+++ b/Ricette/Pane-e-lievitati/crackers-al-sesamo.tex
@@ -16,6 +16,6 @@
 	Metti la farina, il sale, il sesamo nella bull della planetaria e mescola. Aggiungi la parte liquida e impasta leggermente con la foglia. Fai riposare la pasta per 20 minuti coperta con una pellicola.
 	Tira la pasta con la macchinetta fino alla misura 3 senza ripiegare. Taglia i crackers e mettili sulla leccarda ricoperta di carta da forno.
 
-	Cuoci in forno ventilato a \temp{180} per 25/30 minuti.
+	Cuoci in forno ventilato a \temp{180} per 25--30 minuti.
 \end {method}
 
