--- a/Ricette/Dolci/cassatine-siciliane.tex
+++ b/Ricette/Dolci/cassatine-siciliane.tex
@@ -9,7 +9,7 @@
 \ingredients[Pasta di mandorle:]
 	150g farina di mandorle \index{farina di mandorle}
 	75g sciroppo di glucosio \index{sciroppo di glucosio}
-	50g zucchero a velo
+	50g zucchero a velo \index{zucchero a velo}
 	5-10g acqua
 	colorante verde
 \columnbreak
