--- a/Ricette/Dolci/pancake.tex
+++ b/Ricette/Dolci/pancake.tex
@@ -9,15 +9,15 @@
 	30g aceto \index{aceto}
 	25g zucchero
 	10g lievito per dolci
-	5g bicarbonato
-	2 uova
+	5g bicarbonato \index{bicarbonato}
+	2 uova \index{uova}
 	un pizzico di sale
 \columnbreak
 	\ingredients[Farcire i pancake]
 	Frutta fresca
 	Nocciolata
 	sciroppo d'acero \index{sciroppo d'acero}
-	zucchero a velo
+	zucchero a velo \index{zucchero a velo}
 \end{ingreds}
 
 \begin{method}
