--- a/Ricette/Primi/penne-ubriaca.tex
+++ b/Ricette/Primi/penne-ubriaca.tex
@@ -5,12 +5,12 @@
 \autore{Max}
 %\freeze
 \begin{ingreds}
-	500g di penne
-	500g di panna\index{panna} fresca
-	2 salsicce\index{salsiccia}
-	2 fette di speck\index{speck}
-	1 bottiglia di lambrusco\index{lambrusco} secco e corposo
-	Parmigiano Reggiano\index{Parmigiano Reggiano}
+	500g di penne \index{penne}
+	500g di panna fresca \index{panna}
+	2 salsicce \index{salsiccia}
+	2 fette di speck \index{speck}
+	1 bottiglia di lambrusco secco e corposo \index{lambrusco}
+	Parmigiano Reggiano \index{Parmigiano Reggiano}
 %\columnbreak
 %\ingredients[For the Crumble Mixture:]
 
