--- a/Ricette/Primi/riso-per-sushi.tex
+++ b/Ricette/Primi/riso-per-sushi.tex
@@ -6,13 +6,13 @@
 %\vegetarian
 %\freeze
 \begin{ingreds}
-	500g riso Roma\index{riso}
+	500g riso Roma \index{riso}
 	Acqua
 \columnbreak
 \ingredients[Condimento per il riso sushi:]
 	2 cucchiai di zucchero
 	$\frac{1}{2}$ cucchiaio di sale
-	1 bicchiere di aceto di riso
+	1 bicchiere di aceto di riso \index{aceto di riso}
 \end{ingreds}
 
 \begin{method}
