--- a/Ricette/Secondi-di-carne/nuggets-di-pollo.tex
+++ b/Ricette/Secondi-di-carne/nuggets-di-pollo.tex
@@ -7,7 +7,7 @@
 	500g  petto di pollo \index{pollo}
 	45g cipolla bianca \index{cipolla}
 	poco aglio
-	80g pancarré o pangrattato \index{pancarré}
+	80g pancarré o pangrattato \index{pancarré}\index{pangrattato}
 	1 cucchiaino di sale fino
 	1 cucchiaino di senape \index{senape}
 	2 cucchiai di salsa di soia \index{salsa di soia}
