Ricetta: tortellini al forno

--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -237,6 +237,9 @@ Tutte queste ricette sono state provate e sono state inserite qui perché mi son
 \input{./Ricette/Dolci/gelato-stracciatella-al-basilico}
 \input{./Ricette/Dolci/nocciolata}
 \input{./Ricette/Dolci/pancake}
+\input{./Ricette/Dolci/frolla}
+\input{./Ricette/Dolci/tortellini}
+
 
 \chapter{Cocktails}
 \input{./Ricette/Cocktails/bitter}
