--- a/Ricette/Dolci/tortellini.tex
+++ b/Ricette/Dolci/tortellini.tex
@@ -5,7 +5,15 @@
 \autore{Max (Nonna Giuli)}
 \begin{ingreds}
 	% Qui gli ingredienti uno sotto all'altro
-	Pasta frolla (Vedi ricetta \ref{frolla} )
+	\ingredients[Pasta frolla:]
+	1kg farina
+	400g burro
+	2 tuorli
+	2 uova
+	2 bustine di vanillina
+	100g di mandorle
+	\frac{1}{2} bicchiere di liquore
+\columnbreak
 	\ingredients[Per il ripieno:]
 	1,5Kg (secondo me è sbagliato) di marmellate miste \index{marmellata} \footnote{Devono essere tutte marmellate abbastanza acide: perfette prugne e ciliege, indispensabile il "Sapore" o Savuret}
 	1 cucchiaio di polvere di caffé \index{caffé}
