--- a/Ricette/Dolci/tortellini.tex
+++ b/Ricette/Dolci/tortellini.tex
@@ -1,4 +1,4 @@
-\recipe[Questa è la ricetta di mia mamma dei tortellini al forno. La particolarità di questa ricetta è il tempo di riposo del ripieno di circa 15gg. Il risultato è strepitoso.]{Tortellini al forno}
+\recipe[Questa è la ricetta di mia mamma dei tortellini al forno: un dolce tipico natalizio. La particolarità di questa ricetta è il lungo tempo di riposo del ripieno.]{Tortellini al forno}
 \serves{4}%<----Numero di porzioni
 \preptime{1 ora}%<---Tempo di preparazione
 \cooktime[]{30 minuti}%<-----Tempo di cottura
@@ -6,20 +6,20 @@
 \begin{ingreds}
 	% Qui gli ingredienti uno sotto all'altro
 	\ingredients[Pasta frolla:]
-	1kg farina
-	400g burro
+	1kg farina \index{farina}
+	400g burro \index{burro}
 	2 tuorli
-	2 uova
+	2 uova \index{uova}
 	2 bustine di vanillina
-	100g di mandorle
-	\frac{1}{2} bicchiere di liquore
+	100g di mandorle tritate \index{mandorle}
+	mezzo bicchiere di liquore
 \columnbreak
 	\ingredients[Per il ripieno:]
-	1,5Kg (secondo me è sbagliato) di marmellate miste \index{marmellata} \footnote{Devono essere tutte marmellate abbastanza acide: perfette prugne e ciliege, indispensabile il "Sapore" o Savuret}
+	750g marmellate miste \index{marmellata} \footnote{Devono essere tutte marmellate abbastanza acide: perfette prugne e ciliege, indispensabile il "Sapore" o Savuret}
 	1 cucchiaio di polvere di caffé \index{caffé}
 	2 cucchiai di cacao amaro \index{cacao}
-	220g castagne bollite \index{castagne}
-	70g uvetta ammollata \index{uvetta}
+	250g castagne bollite \index{castagne}
+	50g uvetta ammollata \index{uvetta}
 	Amaretti \index{amaretti}
 	Mandorle \index{mandorle}
 
@@ -35,6 +35,10 @@
 Prepara il ripieno dei tortellini amalgamando tutti gli ingredienti. Poiché non tutte le marmellate sono uguali, le dosi sono indicative e sarà necessario assaggiare il composto per capire come correggerlo. Fai riposare il ripieno fuori al fresco per 10--15 giorni coperto con pellicola trasparente.
 
 	Prepara la pasta frolla e componi i tortellini. Cuoci in forno a \temp{180} per 30 minuti circa.
+	
+\subsection*{Note}
+
+2Kg di farina, 500g di castagne, 1,5kg di marmellate
 
 % Esempio di tabella ---------->
 %\begin{table}[h]
