Aggiunti appunti su vermout e bitter

--- a/Ricette/Cocktails/bitter.tex
+++ b/Ricette/Cocktails/bitter.tex
@@ -16,7 +16,7 @@
 \end{ingreds}
 
 \begin{method}
-\underline{Bitter \#1}. Il 9/12/2022 ho messo in infusione: 300g di Vodka Stolichnaya, 4g di radice di genziana, 10 bacche di cardamomo, 1h di cumino. Fra 10 giorni filtro. Con il filtrato preparo un infuso per 5 minuti, poi il caramello. Per raggiungere il 25\% VOL devo aggiungere 150g di acqua.
+\underline{Bitter \#1}. Il 9/12/2022 ho messo in infusione: 300g di Vodka Stolichnaya, 4g di radice di genziana, 10 bacche di cardamomo, 1h di cumino. Fra 10 giorni filtro. Con il filtrato preparo un infuso per 5 minuti, poi il caramello. Lascio in infusione per 10 giorni. Per raggiungere il 25\% VOL dovrò aggiungere 150g di acqua, per quanto riguarda il caramello assaggerò.
 % Esempio di tabella ---------->
 %\begin{table}[h]
 %\begin{tabular}{lcc}
