--- a/Ricette/Cocktails/gin.tex
+++ b/Ricette/Cocktails/gin.tex
@@ -6,7 +6,7 @@
 \begin{ingreds}
 	% Qui gli ingredienti uno sotto all'altro
 	1 distillato neutro
-	botanicals
+	botanicals come da descrizione
 
 
 % Se vuoi aggiungere gli ingredienti per una preparazione
