--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -241,9 +241,12 @@ Tutte queste ricette sono state provate e sono state inserite qui perché mi son
 
 
 \chapter{Cocktails}
+\input{./Ricette/Cocktails/negroni}
+
+\chapter{Appunti}
+In questo capitolo raccolgo le ricette in produzione in attesa della stesura definitiva.
 \input{./Ricette/Cocktails/bitter}
 \input{./Ricette/Cocktails/gin}
-\input{./Ricette/Cocktails/negroni}
 \input{./Ricette/Cocktails/vermouth}
 
 
