Aggiunti appunti per la giardiniera

--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -248,6 +248,7 @@ In questo capitolo raccolgo le ricette in produzione in attesa della stesura def
 \input{./Ricette/Cocktails/bitter}
 \input{./Ricette/Cocktails/gin}
 \input{./Ricette/Cocktails/vermouth}
+\input{./Ricette/Basi/giardiniera}
 
 
 
