Giardiniera: modifica minore

--- a/Ricette/Basi/giardiniera.tex
+++ b/Ricette/Basi/giardiniera.tex
@@ -1,8 +1,8 @@
 \recipe[Scrivo qui gli appunti relativi alle diverse prove che sto facendo con le verdure fermentate]{Giardiniera di verdure fermentate}
 \serves{4}%<----Numero di porzioni
-\preptime{1 ora}%<---Tempo di preparazione
-\cooktime[]{30 minuti}%<-----Tempo di cottura
-%\autore{QUI-IL_NOME}
+\preptime{10 giorni}%<---Tempo di preparazione
+\cooktime[]{-}%<-----Tempo di cottura
+\autore{Max}
 \begin{ingreds}
 	% Qui gli ingredienti uno sotto all'altro
 	Verdure varie
