--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -163,7 +163,7 @@ In questo testo sono raccolte le mie ricette preferite e quelle della mia famigl
 
 Se le ricette sono state prese da fonti diverse nelle prime righe del testo viene indicata la fonte alla quale si rimanda per approfondimento o per la licenza di utilizzo.
 
-Tutte queste ricette sono state provate e sono state inserite qui perché mi sono piaciute e ho ritenuto valesse la pena ricordarle. Per questo motivo il presente testo non è un libro di ricette ma è il mio quaderno di \emph{Appunti di cucina}.
+Tutte queste ricette sono state provate e sono state inserite qui perché mi sono piaciute e ho ritenuto valesse la pena trascriverle per ricordarle. Il presente testo non è un libro di ricette ma è il mio quaderno di \emph{Appunti di cucina}.
 
 \input{./metodi/temperature.tex}
 
