--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -244,7 +244,7 @@ Tutte queste ricette sono state provate e sono state inserite qui perché mi son
 \input{./Ricette/Cocktails/negroni}
 
 \chapter{Appunti}
-In questo capitolo raccolgo le ricette in produzione in attesa della stesura definitiva.
+In questo capitolo raccolgo le ricette che sto provando in attesa della stesura definitiva.
 \input{./Ricette/Cocktails/bitter}
 \input{./Ricette/Cocktails/gin}
 \input{./Ricette/Cocktails/vermouth}
