--- a/Ricette/Cocktails/vermouth.tex
+++ b/Ricette/Cocktails/vermouth.tex
@@ -1,6 +1,6 @@
 \recipe[Appunti per produrre il vermouth: ricetta da codificare]{Vermouth: appunti}
 \serves{-}%<----Numero di porzioni
-\preptime{1 ora}%<---Tempo di preparazione
+\preptime{10 giorni}%<---Tempo di preparazione
 \cooktime[]{-}%<-----Tempo di cottura
 \autore{Max}
 \begin{ingreds}
