Figura: Negroni e derivati

--- a/Ricette/Cocktails/negroni.tex
+++ b/Ricette/Cocktails/negroni.tex
@@ -1,4 +1,4 @@
-\recipe[Mi piacciono molto tutti i derivati stretti del Negroni. Li preparo spesso nella stagione fredda e mi piace scoprire nuove note aromatiche variando la qualità di gin e vermuth.]{Negroni \& Americano}
+\recipe[]{Negroni \& Americano}
 \serves{1}%<----Numero di porzioni
 \preptime{5 minuti}%<---Tempo di preparazione
 \cooktime[]{-}%<-----Tempo di cottura
@@ -29,14 +29,18 @@ Assembla il cocktail direttamente in un bicchiere old fashioned. Metti il giacci
 
 Inserisci nel bicchiere una fetta d'arancia (indispensabile) e spruzza un po' di scorza di arancia sul bicchiere per profumarlo.
 
-
+La lista degli ingredienti comprende solo i cocktails Americano e Negroni, tuttavia seguendo lo schema della figura \ref{negroni:schema} è facile produrre le altre varianti, ricordando che: Il bicchiere è sempre old fashioned, gli ingredienti vanno sempre divisi in partii uguali, la tonica va aggiunta sempre per ultima.
 \end{method}
 
 %\subsection*{Note}
 
 % Figura
-\begin{center}
-\includegraphics[width=5cm]{img/negroni.jpg}
-\end{center}
+\begin{figure}[!h]
+\centering
+\includegraphics[]{img/negroni.png}
+\caption{Il Negroni e i suoi derivati.}
+\label{negroni:schema}
+\end{figure}
+
 
 
