Solo ricetta del Negroni e come variare.

--- a/Ricette/Cocktails/negroni.tex
+++ b/Ricette/Cocktails/negroni.tex
@@ -1,4 +1,4 @@
-\recipe[]{Negroni \& Americano}
+\recipe[]{Negroni \& derivati}
 \serves{1}%<----Numero di porzioni
 \preptime{5 minuti}%<---Tempo di preparazione
 \cooktime[]{-}%<-----Tempo di cottura
@@ -14,22 +14,21 @@
 
 \columnbreak
 
-\ingredients[Americano]
-	50ml Acqua tonica
-	50ml Vermouth rosso
-	50ml Bitter
-	1 fetta d'arancia
-	Scorza d'arancia
-	2 gocce di angostura (opzionali)
+\ingredients[Americano:]
+	Sostituisci Gin con Tonica
+\ingredients[Sbagliato:]
+	Sostituisci Gin con Prosecco
+\ingredients[Milano-Torino:]
+	Togli Gin
+\ingredients[Garibaldi:]
+	Sostituisci Gin e Vermouth con Succo d'arancia
 
 \end{ingreds}
 
 \begin{method}
-Assembla il cocktail direttamente in un bicchiere old fashioned. Metti il giaccio, versa tutti gli ingredienti e mescola leggermente. Per l'Americano aggiungi l'acqua tonica solo alla fine.
+Metti il giaccio in un bicchiere old fashioned, versa tutti gli ingredienti e mescola leggermente. Inserisci nel bicchiere una fetta d'arancia e spruzza un po' di scorza di arancia sul bicchiere per profumarlo.
 
-Inserisci nel bicchiere una fetta d'arancia (indispensabile) e spruzza un po' di scorza di arancia sul bicchiere per profumarlo.
-
-La lista degli ingredienti comprende solo i cocktails Americano e Negroni, tuttavia seguendo lo schema della figura \ref{negroni:schema} è facile produrre le altre varianti, ricordando che: Il bicchiere è sempre old fashioned, gli ingredienti vanno sempre divisi in partii uguali, la tonica va aggiunta sempre per ultima.
+La lista degli ingredienti comprende il Negroni e le variazioni per produrre i derivati. Seguendo lo schema della figura \ref{negroni:schema} è facile produrre tutte le varianti, ricordando queste regole: il bicchiere è old fashioned, gli ingredienti vanno divisi in parti uguali, la tonica va aggiunta per ultima.
 \end{method}
 
 %\subsection*{Note}
