--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -241,6 +241,7 @@ Tutte queste ricette sono state provate e sono state inserite qui perché mi son
 
 
 \chapter{Cocktails}
+\input{./Ricette/Cocktails/mule}
 \input{./Ricette/Cocktails/negroni}
 
 \chapter{Appunti}
