--- a/Ricette/Cocktails/bitter.tex
+++ b/Ricette/Cocktails/bitter.tex
@@ -17,6 +17,8 @@
 
 \begin{method}
 \underline{Bitter \#1}. Il 9/12/2022 ho messo in infusione: 300g di Vodka Stolichnaya, 4g di radice di genziana, 10 bacche di cardamomo, 1h di cumino. Fra 10 giorni filtro. Con il filtrato preparo un infuso per 5 minuti, poi il caramello. Lascio in infusione per 10 giorni. Per raggiungere il 25\% VOL dovrò aggiungere 150g di acqua, per quanto riguarda il caramello assaggerò.
+
+Il 15/12/2022 ho fatto un infuso con 150g di acqua e il filtrato dall'alcool. Ho fatto 65g di caramello che ho sciolto nell'infuso filtrato. RISULTATO: Il sapore è perfetto, molto simile al Campari per amaro. Leggermente torbido a causa del cumino in polvere, meglio usare quello in semi. Per il resto è perfetto, eventualmente si può aggiungere una nota aromatica più spinta lasciando la stessa proporzione di angelica.
 % Esempio di tabella ---------->
 %\begin{table}[h]
 %\begin{tabular}{lcc}
