Aggiunti altri test sul vermouth

--- a/Ricette/Cocktails/vermouth.tex
+++ b/Ricette/Cocktails/vermouth.tex
@@ -24,6 +24,11 @@
 
 Il 15/12/2022 ho filtrato. Gusto bilanciato, domina la cannella senza essere fastidiosa.
 
+\underline{Vermouth \#2}. Il 17/12/2020 ho messo in infusione: 750ml di Rabesco Bertolani con 15g di artemisia vulgaris, 2g di cannella, 2g di pepe di sichuan, 2g di pepe nero, 1g di noce moscata, 1g di chiodi di garofano, 6 bacche di cardamomo.
+
+\underline{Vermouth \#3}. Il 17/12/2020 ho messo in infusione: 750ml di Spergola di Bertolani con 15g di artemisia vulgaris, 2g di pepe bianco, 2g di pepe di sichuan, 2g di pepe nero, 1g di noce moscata, 1g di chiodi di garofano, 6 bacche di cardamomo.
+
+
 % Esempio di tabella ---------->
 %\begin{table}[h]
 %\begin{tabular}{lcc}
