Nuovi esperimenti con giardiniera

--- a/Ricette/Basi/giardiniera.tex
+++ b/Ricette/Basi/giardiniera.tex
@@ -19,7 +19,9 @@
 \begin{method}
 \underline{Giardiniera \#1}. Messo in salamoia (20g/1l) carote, cipolla di tropea, peperone rosso, cavolfiore viola. Lasciato in salamoia per 9 giorni. Risultato: colore bellissimo, la cipolla da un profumo ottimo ma si sfalda, peperone troppo molle, il resto delle verdure fantastico.
 
-\underline{Giardiniera \#2}. 06/12/2022. Messo in salamoia (20g/1l) carote, cipolla di tropea, finocchio, cavolo romanesco, pepe. Risultato - Il colore non mi piace e il cavolo romanesco ha rilasciato un odore non sempre buono. Meglio abbondare con la cipolla.
+\underline{Giardiniera \#2}. 06/12/2022. Messo in salamoia (20g/1l) carote, cipolla di tropea, finocchio, cavolo romanesco, pepe. Risultato - Il colore non mi piace e il cavolo romanesco ha rilasciato un odore non sempre buono ed è durissimo, meglio evitarlo e abbondare con la cipolla.
+
+\underline{Giardiniera \#3}. 18/12/2022. Messo in salamoia 20g/1l carote, cipolline borettane, cavolo viola. Le cipolline le ho semplicemente lavate sotto l'acqua, forse sarebbe stato meglio lasciarle in ammollo.
 
 
 % Esempio di tabella ---------->
