Note sulla versione 2 del bitter

--- a/Ricette/Cocktails/bitter.tex
+++ b/Ricette/Cocktails/bitter.tex
@@ -18,23 +18,10 @@
 \begin{method}
 \underline{Bitter \#1}. Il 9/12/2022 ho messo in infusione: 300g di Vodka Stolichnaya, 4g di radice di genziana, 10 bacche di cardamomo, 1h di cumino. Fra 10 giorni filtro. Con il filtrato preparo un infuso per 5 minuti, poi il caramello. Lascio in infusione per 10 giorni. Per raggiungere il 25\% VOL dovrò aggiungere 150g di acqua, per quanto riguarda il caramello assaggerò.
 
-Il 15/12/2022 ho fatto un infuso con 150g di acqua e il filtrato dall'alcool. Ho fatto 65g di caramello che ho sciolto nell'infuso filtrato. RISULTATO: Il sapore è perfetto, molto simile al Campari per amaro. Leggermente torbido a causa del cumino in polvere, meglio usare quello in semi. Per il resto è perfetto, eventualmente si può aggiungere una nota aromatica più spinta lasciando la stessa proporzione di angelica.
-% Esempio di tabella ---------->
-%\begin{table}[h]
-%\begin{tabular}{lcc}
-%\toprule
-%	Ingredienti	&	Peso(g)	&	Peso(g)\\
-%\midrule
-%	Paprika		&	40	&	60	\\
-%	Sale		&	33	&	50	\\
-%	Zucchero	&	20	&	30	\\
-%	Cumino		&	2	&	3	\\
-%	Pepe		&	6	&	9	\\
-%	Aglio		&	12	&	18	\\
-%	Origano		&	2	&	3	\\
-%\bottomrule
-%\end{tabular}
-%\end{table}
+Il 15/12/2022 ho fatto un infuso con 150g di acqua e il filtrato dall'alcool. Ho fatto 65g di caramello che ho sciolto nell'infuso filtrato. RISULTATO: Il sapore è perfetto, molto simile al Campari per tipo di amaro, ma poco amaro. Leggermente torbido a causa del cumino in polvere, meglio usare quello in semi. Per il resto è perfetto, eventualmente si può aggiungere una nota aromatica più spinta aumentando la  proporzione di angelica.
+
+\underline{Better \#2}. Il 23/12/2022 ho messo in infusione: 300g di vodka Absolut, 10g di radice di genziana, 10 bacche di cardamomo, 1g di cumino, 1g di coriandolo. Amaro eccessivo abbassare ad un peso intermedio la genziana (6-7 grammi).
+
 
 \end{method}
 
