--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -170,6 +170,7 @@ Tutte queste ricette sono state provate e sono state inserite qui perché mi son
 \newpage
 \chapter{Pane e lievitati}
 \input{./Ricette/Pane-e-lievitati/crackers-al-sesamo}
+\input{./Ricette/Pane-e-lievitati/mantovane}
 \input{./Ricette/Pane-e-lievitati/panini-hamburger-veloci}
 \input{./Ricette/Pane-e-lievitati/pizza-da-pizzeria}
 \input{./Ricette/Pane-e-lievitati/pizza-in-teglia}
