Corretto reduso e ingredienti salsa bbq

--- a/Ricette/Salse/salsa-bbq.tex
+++ b/Ricette/Salse/salsa-bbq.tex
@@ -6,14 +6,15 @@
 \begin{ingreds}
 	200g di doppio \index{concentrato di pomodoro}
 	200g di miele\index{miele}
-	130g di aceto di mele
-	70g di salsa worchester\index{salsa worchester}
+	260g di aceto di mele
+	120g di salsa worchester\index{salsa worchester}
 	1 cucchiaio di senape\index{senape}
 	40g di zucchero
 	15g di sale
 	1,2g di xantana\index{xantana}
 	mezza cipolla\index{cipolla}
 	2 spicchi d'aglio
+	2 cucchiai di marmellata di albicocche
 	noce moscata
 	pimento o altre spezie a piacere
 %\columnbreak
@@ -23,7 +24,7 @@
 
 \begin{method}
 La preparazione della salsa BBQ all'albicocca è molto semplice. Metti tutti gli ingredienti in un frullatore ad esclusione della xantana. Frulla alla massima potenza dopo pochi secondi aggiungi la xantana nel vortice del frullatore.
-Cuoci il la salsa a fuoco moderato fino al raggiungimento della consistenza desiderata.
+Cuoci la salsa a fuoco moderato fino al raggiungimento della consistenza desiderata.
 \end{method}
 
 %\showit[1.25in]{example-image-b}{This is a picture}
