--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -180,7 +180,7 @@ Tutte queste ricette sono state provate e sono state inserite qui perché mi son
 
 
 \newpage
-\chapter{Sale e preparazioni di base}
+\chapter{Salse e preparazioni di base}
 \input{./Ricette/Basi/besciamella}
 \input{./Ricette/Salse/cipolle-caramellate}
 \input{./Ricette/Salse/maionese}
