Aumentata cipolla nella salsa BBQ

--- a/Ricette/Salse/salsa-bbq.tex
+++ b/Ricette/Salse/salsa-bbq.tex
@@ -12,7 +12,7 @@
 	40g di zucchero
 	15g di sale
 	1,2g di xantana\index{xantana}
-	mezza cipolla\index{cipolla}
+	1 cipolla\index{cipolla}
 	2 spicchi d'aglio
 	2 cucchiai di marmellata di albicocche
 	noce moscata
