Modifiche salsa BBQ

--- a/Ricette/Salse/salsa-bbq.tex
+++ b/Ricette/Salse/salsa-bbq.tex
@@ -5,7 +5,7 @@
 \autore{Max}
 \begin{ingreds}
 	200g di doppio \index{concentrato di pomodoro}
-	200g di miele\index{miele}
+	200g di miele\index{miele} (NOTA: Diminuire)
 	260g di aceto di mele
 	120g di salsa worchester\index{salsa worchester}
 	1 cucchiaio di senape\index{senape}
