RIcetta del pan bauletto

--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -172,6 +172,7 @@ Tutte queste ricette sono state provate e sono state inserite qui perché mi son
 \input{./Ricette/Pane-e-lievitati/crackers-al-sesamo}
 \input{./Ricette/Pane-e-lievitati/mantovane}
 \input{./Ricette/Pane-e-lievitati/panini-hamburger-veloci}
+\input{./Ricette/Pane-e-lievitati/pan-bauletto}
 \input{./Ricette/Pane-e-lievitati/pizza-da-pizzeria}
 \input{./Ricette/Pane-e-lievitati/pizza-in-teglia}
 \newpage
