Corretto testo Pork ribs

--- a/Ricette/Salse/my-magic-dust.tex
+++ b/Ricette/Salse/my-magic-dust.tex
@@ -11,6 +11,7 @@
 	6g pepe nero
 	2g cumino
 	2g aglio
+	peperoncino a piacere
 %\columnbreak
 %\ingredients[For the Crumble Mixture:]
 
@@ -25,12 +26,12 @@
 	Ingredienti	&	Peso(g)	&	Peso(g)\\
 \midrule
 	Paprika		&	40	&	60	\\
-	Sale		&	33	&	50	\\
-	Zucchero	&	20	&	30	\\
+	Sale			&	33	&	50	\\
+	Zucchero		&	20	&	30	\\
 	Cumino		&	2	&	3	\\
-	Pepe		&	6	&	9	\\
-	Aglio		&	12	&	18	\\
-	Origano		&	2	&	3	\\
+	Pepe			&	6	&	9	\\
+	Aglio		&	13	&	20	\\
+	Peperoncino	&	3	&	5	\\
 \bottomrule
 \end{tabular}
 	\caption{Tabella con le proporzioni variate in base al quantitativo che vuoi produrre}
