--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -185,6 +185,7 @@ Tutte queste ricette sono state provate e sono state inserite qui perché mi son
 \input{./Ricette/Basi/besciamella}
 \input{./Ricette/Salse/cipolle-caramellate}
 \input{./Ricette/Salse/maionese}
+\input{./Ricette/Salse/rub-delicato}
 \input{./Ricette/Salse/my-magic-dust}
 \input{./Ricette/Salse/salsa-bbq}
 \input{./Ricette/Basi/sfoglia}
