--- a/Ricette/BBQ/pork-ribs.tex
+++ b/Ricette/BBQ/pork-ribs.tex
@@ -1,4 +1,4 @@
-\recipe[]{Pork ribs}
+\recipe[]{Pork ribs}\label{pork-ribs}
 \serves{4}%<----Numero di porzioni
 \preptime{4 ore}%<---Tempo di preparazione
 \cooktime[]{3 ore}%<-----Tempo di cottura
@@ -7,7 +7,7 @@
 	% Qui gli ingredienti uno sotto all'altro
 	1 costato di maiale intero \index{costine di maiale}
 	senape \index{senape}
-	rub (Vedi ricetta \ref{rub:magic-dust}) \index{rub}
+	rub (Vedi ricetta \ref{rub:magic-dust} oppure \ref{rub:delicato}) \index{rub}
 	salsa bbq (Vedi ricetta \ref{salsa-bbq}) \index{salsa bbq}
 	succo di mela (o ananas) \index{succo di mela}
 	aceto
@@ -19,13 +19,13 @@
 \end{ingreds}
 
 \begin{method}
-Chiedi al tuo macellaio di dividere il costato in 2 parti trasversalmente alle ossa. Elimina la membrana interna e quanto più grasso possibile. Cospargi il costato con la senape e il rub.
+Chiedi al tuo macellaio di dividere un costato di maiale in 2 parti tagliandolo trasversalmente alle ossa. Elimina la membrana interna ed eventualmente la parte del diaframma se presente. Togli quanto quanto più grasso possibile (\textit{trimming}). Cospargi il costato prima con la senape poi con il rub, massaggiando in modo che aderisca su tutta la superficie.
 
 Stabilizza il bbq alla temperatura di \temp{110}. Cuoci le costine per 1 ora dal lato dell'osso. Gira le costine e cuoci per un'altra ora alla stessa temperatura.
 
-Scalda poco succo di frutta con un po' di aceto. Avvolgi le costine con un foglio di carta da forno e un foglio di alluminio dopo averle bagnate leggermente con il succo e l'aceto. Riporta in cottura per un'altra ora sempre a \temp{110}.
+Scalda poco succo di frutta con un po' di aceto di vino o di mele. Avvolgi le costine con un foglio di carta da forno e un foglio di alluminio dopo averle bagnate leggermente con il succo e l'aceto. Riporta in cottura per un'altra ora sempre a \temp{110}.
 
-Togli le costine dal cartoccio e alta il bbq alla massima temperatura. Cospargi di salsa bbq e cuoci per altri 10 minuti.
+Togli le costine dal cartoccio e alza il bbq alla massima temperatura. Mentre il bbq sale di temperatura, cospargi le costine con la Salsa bbq (\ref{salsa-bbq}) e cuoci per altri 10 minuti in modo da glassare la superficie.
 
 \end{method}
 
