--- a/Ricette/Dolci/barrette-energetiche.tex
+++ b/Ricette/Dolci/barrette-energetiche.tex
@@ -1,4 +1,4 @@
-\recipe[Utilizzo queste barrette energetiche per la mia attività sportiva. Visto il costo delle barrette commerciali, prepararsele in casa porta ad un notevole risparmio economico.]{Barrette energetiche}
+\recipe[]{Barrette energetiche}
 \serves{16 barrette}
 \preptime{1 ora}
 \cooktime{40 minuti}
@@ -16,7 +16,7 @@
 \end{ingreds}
 
 \begin{method}
-	Schiaccia le banane. Se necessario, scalda leggermente il burro di arachidi e il miele per amalgamarli meglio al resto degli ingredienti. Mescola tutti gli ingredienti. Fodera un teglia di carta da forno e cuoci a \temp{140} per 40 minuti. Ogni barretta dovrebbe avere circa 150 calorie.
+	Schiaccia le banane. Se necessario, scalda leggermente il burro di arachidi e il miele per amalgamarli meglio al resto degli ingredienti. Mescola tutti gli ingredienti. Fodera un teglia di carta da forno e cuoci a \temp{140} per 40 minuti. Ogni barretta dovrebbe avere circa 256 kcal.
 \end{method}
 
 %\showit[1.25in]{example-image-b}{This is a picture}
