Barrette energetiche: dimensione teglia

--- a/Ricette/Dolci/barrette-energetiche.tex
+++ b/Ricette/Dolci/barrette-energetiche.tex
@@ -16,7 +16,9 @@
 \end{ingreds}
 
 \begin{method}
-	Schiaccia le banane. Se necessario, scalda leggermente il burro di arachidi e il miele per amalgamarli meglio al resto degli ingredienti. Mescola tutti gli ingredienti. Fodera un teglia di carta da forno e cuoci a \temp{140} per 40 minuti. Ogni barretta dovrebbe avere circa 256 kcal.
+	Schiaccia le banane. Se necessario, scalda leggermente il burro di arachidi e il miele per amalgamarli meglio al resto degli ingredienti. Mescola tutti gli ingredienti in una ciotola capiente. Fodera con carta da forno un teglia di dimensione 20x30cm e cuoci le barrette in forno ventilato a \temp{140} per 40 minuti. Lascia raffreddare bene il composto poi procedi a tagliare le barrette. Dovresti ottenere 16 barrette che puoi avvolgere singolarmente e riporre in congelatore da usare al bisogno.
+	
+Ogni barretta dovrebbe avere circa 256 kcal.
 \end{method}
 
 %\showit[1.25in]{example-image-b}{This is a picture}
