Aggiunte voci indice analitico

--- a/Ricette/Salse/rub-delicato.tex
+++ b/Ricette/Salse/rub-delicato.tex
@@ -5,7 +5,7 @@
 %\autore{QUI-IL_NOME}
 \begin{ingreds}
 	% Qui gli ingredienti uno sotto all'altro
-	120g di paprika dolce
+	120g di paprika dolce\index{paprika dolce}
 	50g di sale
 	20g di zucchero
 	20g di aglio granulare
@@ -14,7 +14,7 @@
 	5g di pepe bianco
 	5g di pepe nero
 	6g di semi di finocchio
-	1g di cumino
+	1g di cumino\index{cumino}
 
 
 % Se vuoi aggiungere gli ingredienti per una preparazione
