Nuovi esperimenti giardiniera

--- a/Ricette/Basi/giardiniera.tex
+++ b/Ricette/Basi/giardiniera.tex
@@ -23,6 +23,8 @@
 
 \underline{Giardiniera \#3}. 18/12/2022. Messo in salamoia 20g/1l carote, cipolline borettane, cavolo viola. Le cipolline le ho semplicemente lavate sotto l'acqua, forse sarebbe stato meglio lasciarle in ammollo.
 
+\underline{Giardiniera \#4}. 19/10/2023. Messo a fermentare una mela Granny Smith in salamoia 20g/1l.
+
 
 % Esempio di tabella ---------->
 %\begin{table}[h]
